--- a/config.toml
+++ b/config.toml
@@ -31,5 +31,6 @@ enableRobotsTXT = true
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
   show_reading_time = true
+  post_content_classes = "sans-serif"
   featured_image = "/images/gohugo-default-sample-hero-image.jpg"
   recent_posts_number = 3
