switch back to /public build dir

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ DefaultContentLanguage = "en"
 Paginate = 5 # this is set low for demonstrating with dummy content. Set to a higher number
 googleAnalytics = ""
 enableRobotsTXT = true
-publishDir = "docs" # for compatibility with GitHub Pages, where generated site will be placed and published
+#publishDir = "docs" # for compatibility with GitHub Pages, where generated site will be placed and published
 
 [sitemap]
   changefreq = "monthly"
