switch to apex domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dev.particl.page/"
+baseURL = "https://particl.page/"
 languageCode = "en-us"
 title = "Particl.page"
 #theme = "particl-page"
