--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@babel/preset-env": "^7.2.3",
     "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
+    "bulma": "^0.9.2",
+    "css-loader": "^5.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "mini-css-extract-plugin": "^1.3.8",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.0",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
     "webpack-merge": "^4.2.1",
     "webpack-nano": "^0.6.1"
   }
