--- a/data/en/authors.yaml
+++ b/data/en/authors.yaml
@@ -1,6 +1,6 @@
 - name: "xe-non"
-  photo: "https://placehold.it/150x150"
-  bio: "[EN] Enthusiastic author digging Hugo CMS!"
-  email: "author@example.com"
+  photo: "/images/authors/xe-non.png"
+  bio: "Digital privacy and secrutity enthusiast. Particl Page co-founder and developer."
+  email: ""
   homepage: ""
-  twitter_username: "example"
+  twitter_username: "particl_page"
