move all data from authors.yaml to taxonomy

--- a/config.toml
+++ b/config.toml
@@ -51,6 +51,7 @@ enableGitInfo = false
   category = "categories"
   tag = "tags"
   series = "series"
+  author = "authors"
   project = "projects" # type of project in ecosystem (separate category)
 
 
